# mosec

./: .env  Cargo.toml  Dockerfile  README.md  \  mosec.sqlite  sqlx-data.json
migrations/: 20221004045439_audits.down.sql  20221004045439_audits.up.sql
src/: database.rs  main.rs  model.rs  system.rs
static/: style.css
templates/: audit.html  base.html  devices.html  index.html  network.html
