[package]
name = "mosec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
tera = "1.17.1"
# diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "offline", "chrono"] }
dotenvy = "0.15"
env_logger = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.22", features = ["serde"] }
